example/src/components/Header/styles.css
header {
  height: 70vh;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  font-family: 'Barlow', sans-serif;
  background: linear-gradient(111.34deg, #b82949 0%, rgba(184, 41, 73, 0) 100%),
    #e9b84c;
  color: #fff;
  overflow: hidden;
  box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.4);
  border-radius: 0 0 25px 25px;
}

header img {
  align-self: flex-start;
  height: 1.875rem;
  margin: 1.875rem;
}

header section {
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}

label {
  font-size: 1.125rem;
}

.slogan-container {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
}

.slogan-container > * {
  margin: 0 1.875rem;
  padding: 0;
  text-align: right;
}

.slogan-container h1 {
  font-size: 3rem;
}

.slogan-container p {
  max-width: 600px;
  font-size: 1.5rem;
  padding-top: 3rem;
}

.installation-container {
  display: flex;
}

.installation-container div {
  position: inherit;
  background: #fff;
  padding: 15px;
  border-radius: 0 15px 15px 0;
}

.comment {
  color: #9a9a9a;
}

.shell {
  color: #333;
  cursor: pointer;
}

.github-button {
  align-self: center;
  max-height: 50px;
  color: #fff !important;
  margin-left: 1rem !important;
}

.github-button span svg {
  margin-right: 0.5rem;
}

.enable-button {
  align-self: flex-end;
  max-width: 150px;
  margin: 0 1.875rem 1.875rem 0 !important;
  border: 1px solid #fff !important;
}

.enable-button span {
  color: #fff;
}

@media only screen and (max-width: 1100px) {
  .slogan-container h1 {
    font-size: 2.8rem;
  }

  .slogan-container p {
    padding-top: 2.8rem;
    font-size: 1.3rem;
  }
}

@media only screen and (max-width: 1000px) {
  .slogan-container h1 {
    font-size: 2.5rem;
  }

  .slogan-container p {
    padding-top: 2.5rem;
    font-size: 1.3rem;
  }
}

@media only screen and (max-width: 900px) {
  .slogan-container h1 {
    font-size: 2rem;
  }

  .slogan-container p {
    padding-top: 2rem;
    font-size: 1.1rem;
  }
}

@media only screen and (max-width: 725px) {
  header {
    border-radius: 0 0 15px 15px;
  }

  .slogan-container h1 {
    font-size: 1.7rem;
  }

  .slogan-container p {
    padding-top: 1.7rem;
    font-size: 1.1rem;
    max-width: 400px;
  }
}

@media only screen and (max-width: 600px) {
  header img {
    height: 1.25rem;
    margin: 1.25rem;
  }

  .slogan-container > * {
    margin: 0 1.25rem;
  }

  label {
    font-size: 1rem;
  }

  .enable-button {
    margin: 0 1.25rem 1.25rem 0 !important;
  }
}

@media only screen and (max-width: 400px) {
  .github-button {
    margin-left: 0 !important;
  }

  .github-button span span {
    display: none;
  }

  .github-button span svg {
    margin: 0;
  }
}

